--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `generate-authors.sh`.
 
-kwamboka1 <makorimildred@gmail.com>
-Zelipha <zeliphawambui756@gmail.com>
+Baraka Calvin <crbaraka@gmail.com>
